# my_repo

./: README.md
OS/: a1.c  ping_pong_2b.c  prod_cons_2.c  semaphore.c  so1.h  tcp_server.c  thread.s  udp_client.c
SettingUpGoogleTest/: CMakeLists.txt  main.cpp
SettingUpGoogleTest/tests/: ClassName.hpp  test.cpp
basic_tests/: CMakeLists.txt
snake/: Apple.hpp  CMakeLists.txt  MakeFile  Point.hpp  Snake.hpp  a.out  main.cpp  makefile  snake
src/: Makefile  Makefile.header  Makefile.trailer
src/OS/: .cproject  100komp.c  Makefile  MemMap.c  a.c  a.h  a.out  a1.h  a2.c  a2.h  analysis.txt  callgrind.out.6334  circ_q.c  client  dicount.c  ping_pong_1.c  ping_pong_1.s  ping_pong_2a.c  ping_pong_3a.c  ping_pong_3b.c  processes_2.c  processes_3.c  processes_5.c  prod_cons_1.c  prod_cons_3.c  prod_cons_4.c  prod_cons_5.c  prod_cons_6.c  prod_cons_7.c  semaphore.h  semaphore_test.c  semv.c  serv  server  server.c  shuffle_and_sort.c  simple_wd_fork_exec.c  simple_wd_system.c  so1.c  so2.c  (+5 more)
src/cpp/: captain  cpp.txt  names.txt  names.txte  q1.c  q12.cpp  q13.cpp  q14.c  q14.cpp  q14.cpps  q14.cs  q15.1  q15.cpp  q15.h  q15.s  q15_main.cpp  q15_main.s  q15_main_opt.s  q16.cpp  q16.h  q16_2.c  q16_2.cpp  q17.cpp  q18.cpp  q19.cpp  q2.c  q20.cpp  q24.cpp  q26.cpp  q27.cpp  q28.cpp  q3.cpp  q4.c  q4.cpp  q6.cpp  q7.cpp  q8.cpp  q9.cpp  shared.cpp  test.c  (+3 more)
src/exercises/: Makefile  a.out  bursa.c  depends  final_test_c.c  fs_hack.c  has_brackets.c  input_file.txt  milion_chars.c  recursion.c  utils.h  ws1.c  ws2_exercizes.c  ws2_string.c  ws2_string.h  ws2_test.c  ws3.c  (+12 more)
(+420 files in other folders)
